[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/NextLevelTrigger.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/Boundaries.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scenes/PlayArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scenes/GoSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/ui/background.png" type="Texture" id=6]
[ext_resource path="res://assets/scripts/Overlay.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/8bitoperatorplus8regular.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/images/ui/healthbar_background.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/healthbar_foreground.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/menu_button/menu_button_normal.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ui/menu_button/menu_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/images/ui/menu_button/menu_button_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/images/missmoneyspider/missmoneyspider0.png" type="Texture" id=14]
[ext_resource path="res://assets/images/missmoneyspider/missmoneyspider1.png" type="Texture" id=15]
[ext_resource path="res://assets/images/missmoneyspider/speech_background.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )

[node name="NextLevelTrigger" parent="." instance=ExtResource( 2 )]

[node name="Boundaries" parent="." instance=ExtResource( 3 )]

[node name="PlayArea" parent="." instance=ExtResource( 4 )]

[node name="HUD" type="Node2D" parent="."]

[node name="GoSprite" parent="HUD" instance=ExtResource( 5 )]
visible = false

[node name="Overlay" type="TextureRect" parent="HUD"]
editor/display_folded = true
margin_right = 320.0
margin_bottom = 46.0
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="OverlayColumns" type="HBoxContainer" parent="HUD/Overlay"]
margin_right = 320.0
margin_bottom = 38.0

[node name="Titles" type="VBoxContainer" parent="HUD/Overlay/OverlayColumns"]
margin_right = 73.0
margin_bottom = 38.0

[node name="ScoreTitle" type="Label" parent="HUD/Overlay/OverlayColumns/Titles"]
margin_right = 73.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "SCORE"

[node name="HealthTitle" type="Label" parent="HUD/Overlay/OverlayColumns/Titles"]
margin_top = 21.0
margin_right = 73.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "HEALTH"

[node name="Business" type="VBoxContainer" parent="HUD/Overlay/OverlayColumns"]
margin_left = 77.0
margin_right = 231.0
margin_bottom = 38.0

[node name="Number" type="Label" parent="HUD/Overlay/OverlayColumns/Business"]
margin_right = 154.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "0"
align = 2

[node name="HealthBar" type="TextureRect" parent="HUD/Overlay/OverlayColumns/Business"]
margin_top = 21.0
margin_right = 154.0
margin_bottom = 35.0
texture = ExtResource( 9 )

[node name="HealthGauge" type="TextureProgress" parent="HUD/Overlay/OverlayColumns/Business/HealthBar"]
margin_left = 2.0
margin_top = 2.27739
margin_right = 152.0
margin_bottom = 12.2774
value = 100.0
texture_progress = ExtResource( 10 )

[node name="MenuButtonBackground" type="NinePatchRect" parent="HUD/Overlay/OverlayColumns"]
margin_left = 235.0
margin_right = 320.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="MenuButton" type="TextureButton" parent="HUD/Overlay/OverlayColumns/MenuButtonBackground"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -16.5
margin_bottom = 16.5
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="PauseMenu" type="VBoxContainer" parent="HUD"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 110.0
margin_right = 300.0
margin_bottom = 370.0
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="HUD/PauseMenu"]
margin_top = 41.0
margin_right = 280.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="Continue" type="Button" parent="HUD/PauseMenu"]
margin_top = 78.0
margin_right = 280.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 8 )
shortcut_in_tooltip = false
text = "CONTINUE"

[node name="QuitToMenu" type="Button" parent="HUD/PauseMenu"]
margin_top = 128.0
margin_right = 280.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 8 )
shortcut_in_tooltip = false
text = "QUIT TO MENU"

[node name="Invert" type="CheckButton" parent="HUD/PauseMenu"]
margin_top = 178.0
margin_right = 280.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_colors/font_color_hover_pressed = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_colors/font_color_hover = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.156863, 0.156863, 0.156863, 1 )
shortcut_in_tooltip = false
text = "INVERT MOVEMENT"

[node name="TutorialOverlay" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="TutorialOverlay"]
position = Vector2( 160, 430 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="SpeechBox" type="Sprite" parent="TutorialOverlay"]
position = Vector2( 204, 431 )
texture = ExtResource( 16 )

[node name="MarginContainer" type="MarginContainer" parent="TutorialOverlay/SpeechBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.5
margin_top = -124.0
margin_right = -7.5
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialOverlay/SpeechBox/MarginContainer"]
margin_right = 200.0
margin_bottom = 84.0

[node name="SpeechBox" type="Label" parent="TutorialOverlay/SpeechBox/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 57.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "You're an elite spy, sent behind enemy lines"
autowrap = true

[node name="Button" type="Button" parent="TutorialOverlay/SpeechBox/MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 200.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 8 )
text = "CONTINUE"
